--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Vidéo des Jeux Olympiques</h1>
-  <video autoplay width="2400" controls>
+  <video autoplay muted width="2400" controls>
     <source src="https://github.com/Edoual/JO/raw/main/Jo%20Shot3.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
