--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <video autoplay muted width="2400" controls>
+  <video autoplay muted width="1446" height="500" controls>
     <source src="https://github.com/Edoual/JO/raw/main/Jo%20Shot3.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
