--- a/index.html
+++ b/index.html
@@ -3,11 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      margin: 0;
+      display: flex;
+      justify-content: center;
+    }
+    .video-container {
+      max-width: 1520px;
+      width: 100%;
+    }
+    video {
+      width: 100%;
+      height: auto;
+    }
+  </style>
 </head>
 <body>
-  <video autoplay muted width="720" height="396" controls>
-    <source src="https://github.com/Edoual/JO/raw/main/Jo%20Shot3.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
+  <div class="video-container">
+    <video autoplay muted controls>
+      <source src="https://github.com/Edoual/JO/raw/main/Jo%20Shot3.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
 </body>
 </html>
