--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
       justify-content: center;
     }
     .video-container {
-      max-width: 1520px;
+      max-width: 100%;
       width: 100%;
     }
     video {
       width: 100%;
-      height: auto;
+      height: 100%;
     }
   </style>
 </head>
