--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     .video-container {
       max-width: 100%;
       width: 100%;
+      height: auto;
+      max-height: 389;
     }
     video {
       width: 100%;
       height: auto;
+      
     }
   </style>
 </head>
