--- a/index.html
+++ b/index.html
@@ -8,18 +8,16 @@
       margin: 0;
       display: flex;
       justify-content: center;
+      align-items: center;
+      height: 100vh; /* Optional: to center the video vertically */
     }
     .video-container {
-      max-width: 100%;
       width: 100%;
-      height: auto;
-      max-height: 389;
+      max-width: 1520px; /* Ensure the video container does not exceed 1520px */
     }
     video {
-      width: 100%;
-      height: auto;
-      max-height: 389;
-
+      width: auto; /* Allow the width to adjust automatically */
+      height: 389px; /* Set the height to 389 pixels */
     }
   </style>
 </head>
