--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       max-width: 1520px; /* Ensure the video container does not exceed 1520px */
     }
     video {
-      width: auto; /* Allow the width to adjust automatically */
+      width: 100%; /* Allow the width to adjust automatically */
       height: 389px; /* Set the height to 389 pixels */
     }
   </style>
