--- a/index.html
+++ b/index.html
@@ -10,16 +10,12 @@
       justify-content: center;
     }
     .video-container {
-      max-width: 100%;
+      max-width: 1520px;
       width: 100%;
-      height: auto;
-      max-height: 389;
     }
     video {
       width: 100%;
       height: auto;
-      max-height: 389;
-      
     }
   </style>
 </head>
