--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     video {
       width: 100%;
       height: 100%;
-      object-fit: cover; /* Couvrir l'entiereté du cadre */
-      object-position: center bottom; /* Centrer horizontalement et positionner en bas */
+      object-fit: contain; /* Adapter la vidéo à la taille du conteneur sans la couper */
     }
   </style>
 </head>
@@ -33,4 +32,3 @@
   </div>
 </body>
 </html>
-
