--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
       justify-content: center;
       align-items: center;
       height: 100vh; /* Optionnel : centrer verticalement */
+      overflow: hidden; /* Empêche les scrollbars sur la page */
     }
     .video-container {
       width: 1568px;
       height: 441px;
-      overflow: hidden; /* Masquer la partie de la vidéo qui dépasse du conteneur */
+      overflow: hidden; /* Masquer toute partie débordant du conteneur */
     }
     video {
       width: 100%;
       height: 100%;
-      object-fit: contain; /* Adapter la vidéo à la taille du conteneur sans la couper */
+      object-fit: fill; /* Remplir le conteneur sans respecter le rapport d'aspect */
     }
   </style>
 </head>
